--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   <!-- Head End -->
   <!-- Body Start -->
   <body class="bg-primary relative">
-    <div
-      class="hidden md:absolute w-[400px] h-[400px] top-0 -left-32 blur-3xl bg-blue-600 opacity-50 rounded-full -z-20"
+    <!-- <div
+      class="md:absolute w-[400px] h-[400px] top-0 -left-32 blur-3xl bg-blue-600 opacity-50 rounded-full -z-20"
     ></div>
     <div
-      class="hidden md:absolute w-[550px] h-[550px] -bottom-20 -right-32 blur-3xl bg-blue-600 opacity-50 rounded-full -z-20"
-    ></div>
+      class="md:absolute w-[550px] h-[550px] top-[270px] -right-32 blur-3xl bg-blue-600 opacity-50 rounded-full -z-20"
+    ></div> -->
     <main class="py-10 px-5 md:px-10">
       <!-- Navar -->
       <section class="relative">
@@ -149,12 +149,12 @@
               class="py-3 px-4 rounded-md flex flex-col items-center justify-between hover:border border-blue-400 bg-[#1b1f36]"
             >
               <img
-                src="dist/image/skill-icons/html.png"
+                src="dist/image/skill-icons/css.jpg"
                 alt=""
                 width="62"
                 height="62"
               />
-              <p class="text-white text-sm">HTML</p>
+              <p class="text-white text-sm">CSS</p>
             </div>
           </div>
           <div class="skill-icon">
@@ -162,12 +162,12 @@
               class="py-3 px-4 rounded-md flex flex-col items-center justify-between hover:border border-blue-400 bg-[#151a37]"
             >
               <img
-                src="dist/image/skill-icons/html.png"
+                src="dist/image/skill-icons/js.png"
                 alt=""
                 width="62"
                 height="62"
               />
-              <p class="text-white text-sm">HTML</p>
+              <p class="text-white text-sm">JavaScript</p>
             </div>
           </div>
           <div class="skill-icon">
@@ -175,12 +175,12 @@
               class="py-3 px-4 rounded-md flex flex-col items-center justify-between hover:border border-blue-400 bg-[#151a37]"
             >
               <img
-                src="dist/image/skill-icons/html.png"
+                src="dist/image/skill-icons/tailwind-css.png"
                 alt=""
                 width="62"
                 height="62"
               />
-              <p class="text-white text-sm">HTML</p>
+              <p class="text-white text-sm">TailwindCSS</p>
             </div>
           </div>
           <div class="skill-icon">
@@ -188,12 +188,26 @@
               class="py-3 px-4 rounded-md flex flex-col items-center justify-between hover:border border-blue-400 bg-[#151a37]"
             >
               <img
-                src="dist/image/skill-icons/html.png"
+                src="dist/image/skill-icons/bootstrap.png"
                 alt=""
                 width="62"
                 height="62"
               />
-              <p class="text-white text-sm">HTML</p>
+              <p class="text-white text-sm">Boorstrap</p>
+            </div>
+          </div>
+
+          <div class="skill-icon">
+            <div
+              class="py-3 px-4 rounded-md flex flex-col items-center justify-between hover:border border-blue-400 bg-[#151a37]"
+            >
+              <img
+                src="dist/image/skill-icons/c-.png"
+                alt=""
+                width="62"
+                height="62"
+              />
+              <p class="text-white text-sm">C++</p>
             </div>
           </div>
         </div>
