--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
       </section>
       <!-- skills section -->
       <section class="flex flex-col items-center" id="skills">
-        <h1 class="text-4xl text-blue-400 mb-10 text-center">Skills</h1>
+        <h1 class="text-4xl text-blue-400 mb-10 text-center font-semibold">
+          Skills
+        </h1>
         <div class="text-center w-full md:w-[60%] text-white">
           <p class="text-xl md:text-2xl">
             I am a web developer, I have a solid understanding of HTML, CSS, and
