--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 width="62"
                 height="62"
               />
-              <p class="text-white text-sm">Boorstrap</p>
+              <p class="text-white text-sm">Bootstrap</p>
             </div>
           </div>
 
